--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ openpyxl==3.1.2
 # テストフレームワーク（開発用）
 pytest==7.4.0
 
+# Phase 7: パフォーマンス監視
+psutil==5.9.5
+
 # コード品質（開発用・オプション）
 # pylint==2.17.0
 # black==23.3.0
