--- a/config.ini
+++ b/config.ini
@@ -35,6 +35,13 @@ auto_mask_overflow = true
 # コメントにビットフィールド情報を含めるか
 include_bitfield_comments = true
 
+# ソースコードから型定義を自動抽出するか（v2.3.7）
+extract_definitions = true
+
+# 抽出する定義の種類（カンマ区切り）
+# 可能な値: defines, typedefs, structs, unions, enums, global_vars
+extract_types = defines,typedefs,structs,unions,enums,global_vars
+
 [output]
 # 出力ディレクトリの自動番号付け
 auto_numbering = true
